<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yajhz</string>

    <string name="privacy_and_policy"><u>Privacy and Policy</u></string>
    <string name="already_have_an_account"><u>Already have An Account</u></string>
    <string name="sign_out"><u>Sign Out</u></string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="mobile_number_hint">Mobile number (05)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="restore_password"><u>Restore Password</u></string>
    <string name="notifications">Notifications</string>
    <string name="empty_mobile">Mobile can\'t be empty</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="invalid_password">Password length must be 8 to 12 digits</string>
    <string name="invalid_password_pattern">Password must contain at least 1 number, 1 (upper and lower) case char and special char</string>
    <string name="accept_terms_to_continue">Please accept terms and conditions to continue</string>
    <string name="empty_code">Code can\'t be empty</string>
    <string name="after">After</string>
    <string name="seconds">seconds</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_account_successfully_activated">Your account successfully activated</string>
    <string name="please_complete_your_profile_information">Please, complete your profile information</string>
    <string name="ok">OK</string>
    <string name="empty_first_name">First name can\'t be empty</string>
    <string name="empty_last_name">Last name can\'t be empty</string>
    <string name="empty_birthday">Birthday can\'t be empty</string>
    <string name="empty_gender">Gender can\'t be empty</string>
    <string name="empty_full_name">Full name can\'t be empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_mobile_prefix">Mobile number must start with 05</string>

    <string name="current_location">Current location</string>
    <string name="looking_for_search">Search for…</string>
    <string name="login_drawer">Login</string>
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="warnings">Notifications</string>
    <string name="favs">Favorites</string>
    <string name="share_app">Share app</string>
    <string name="settings">Settings</string>
    <string name="logout_menu">Logout</string>
    <string name="login_warning">Login to use this feature</string>
    <string name="go_to_login">Login</string>
    <string name="choose_city">Select your city</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="i_accept_terms_and_conditions"><u>I accept terms and conditions</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_entry">Enter your mobile number</string>
    <string name="phone_entry_info">Please enter your registered mobile number</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_new_password">New Password</string>
    <string name="please_enter_the_new_password">Please enter the new password</string>
    <string name="passwords_not_matched">Passwords are not match</string>
    <string name="send">Send</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="verify_code">Verify code</string>
    <string name="enter_verify_code">Enter verify code</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="place_name">Place name</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="categories">Categories</string>
    <string name="view_all"><u>View all</u></string>
    <string name="am_text">AM</string>
    <string name="pm_text">PM</string>
    <string name="check_internet_conn">Check your internet connection</string>
    <string name="weak_internet_conn">Your internet connection is weak, please try again later!</string>
    <string name="session_expired">Failed To login</string>


</resources>
