<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.user.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_100sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_yj" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_corner_up"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/title_bg"
                android:fontFamily="@font/droid_bold"
                android:gravity="center|top"
                android:text="@string/login_dummy"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:fontFamily="@font/droid_bold"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/droid_font"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorGrayDarker"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:fontFamily="@font/droid_bold"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                app:boxBackgroundMode="none"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light_gray">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/droid_font"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/colorGrayDarker"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/_14ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/droid_bold"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_24sdp"
                android:background="@drawable/round_button_bg"
                android:paddingHorizontal="@dimen/_64sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/droid_bold"
                    android:text="Don’t have an account ?"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:fontFamily="@font/droid_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>