<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:fontFamily="@font/droid_bold"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:fontFamily="@font/droid_font"
                    android:text="Cairo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/ic_arrow_left"
                    app:drawableTint="@color/colorGold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/droid_font"
                        android:hint="Search for fav food ..."
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_8sdp"
                        android:textColor="@color/colorGrayDarker"
                        android:textColorHint="@color/light_gray" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:src="@drawable/ic_search"
                        android:visibility="visible"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_filter"
                        android:visibility="visible"
                        tools:ignore="ContentDescription" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/droid_font"
                        android:text="@string/categories"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_font"
                        android:text="@string/view_all"
                        android:textColor="@color/colorGold"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_category" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/droid_font"
                        android:text="Popular now"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_font"
                        android:text="@string/view_all"
                        android:textColor="@color/colorGold"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_popular" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/droid_font"
                        android:text="Trending now"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_font"
                        android:text="@string/view_all"
                        android:textColor="@color/colorGold"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_trending" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>